Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test6.java
/*
Test6
Objetivo: Detectar un error en la declaracion de un metodo. 
Falta el tipo del metodo.

*/

class UnaClase extends Hola {
	varinst TipoVariable n;
	
	UnaClase (){
	
	}
	
	static Metodo(){
	}
	
}